# performance-oracle-prototype

./: cl_blocks.py  delta_balances.py  lido.py  oracle.py  pyproject.toml  withdrawals.py
providers/: __init__.py  consensus_layer.py  execution_layer.py  fetch.py  kapi.py
spec/: __init__.py  constants.py  helpers.py
utils/: __init__.py  format.py  performance_timer.py
